--- a/index.html
+++ b/index.html
@@ -1,61 +1,14 @@
 <!DOCTYPE html>
 <html>
     
-    <head> 
-        <link rel="stylesheet" href="index.css">
-        <title></title>
-    </head>
-    <body>
-<header>
-    <div>
-        <img src="Dylan Carroll.png" width="135" height="46" >
-    </div>
-    <nav 
-        <ul>
-            <li>
-                about
-            </li>
-            <li>
-                skills   
-            </li>    
-            <li>
-                work
-            </li>
-            <li>
-                contact
-            </li>
-            </li>
-        </ul>
-    
-    </header>
-
-    <section "heroImg">
-        <div "content">
-            <img src="me.PNG" >
-            <p>    I am a professionally trained leader and salesman. <br />
-                 I am a self-motivated, “go-getter”. I thoroughly enjoy <br />
-                 a challenging project and am always looking for something <br />
-                 new to tackle and learn about. I have always enjoyed design, <br />
-                 architecture, world building, and interface design since as far <br />
-                 as I can remember. It has always interested me and I am usually <br />
-                 the go-to person in my friend group and family that decides just <br />
-                 how something should look or be organized. I am currently <br />
-                 enrolled at Georgia Tech learning to be a UI/UX Designed at one <br />
-                 of their bootcamps designed as such.</p>
-                 <button>Download Resume</button>
-        </div>
-
-        <footer>
-            <ul>
-                <li>about</li>
-                <li>skills</li>
-                <li>work</li>
-                <li>contact</li>
-            </ul>
-        </footer>
-
-    </section>
+<head> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+   <title>UX/UI Homework 20</title>   
 </head>
 
     </body>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </html>
